# rtlsdr-next

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  rtlsdr-next.md
.claude/rules/: dsp.md  hardware.md
.gemini/: GEMINI.md
.github/workflows/: release.yml  rust.yml
assets/: websdr_ui.html
benches/: dsp_bench.rs  librtlsdr_v4.c  vs_librtlsdr_bench.rs
config/: default.toml
examples/: diag_demod.rs  diag_i2c.rs  diag_raw_clone.rs  diag_sys.rs  diag_write.rs  fm_radio.rs  hw_probe.rs  monitor.rs  rtl_tcp.rs  websdr.rs  websdr_ui.html
examples/diag/: diag_demod.rs  diag_i2c.rs  diag_raw_clone.rs  diag_sys.rs  diag_write.rs  hw_probe.rs
src/: config.rs  converter.rs  daemon.rs  demod.rs  device.rs  dsp.rs  error.rs  lib.rs  registers.rs  rtl_tcp.rs  server.rs  stream.rs  tuner.rs  websdr.rs
src/tuners/: e4k.rs  fc001x.rs  mod.rs  r828d.rs  r82xx.rs
wix/: main.wxs
