[package]
name = "rtlsdr-next"
version = "1.0.5"
authors = ["Matt Delashaw", "The DoubleAsterisks scrum team"]
edition = "2024"
license = "Apache-2.0"
description = "A high-performance, async-native Rust driver for RTL2832U-based SDRs, with first-class support for the RTL-SDR Blog V4."
readme = "README.md"
repository = "https://github.com/mattdelashaw/rtlsdr-next"
homepage = "https://github.com/mattdelashaw/rtlsdr-next"
keywords = ["sdr", "radio", "rtl-sdr", "rtl2832u", "driver"]
categories = ["hardware-support", "multimedia::audio"]

[package.metadata.wix]
upgrade-guid = "7C50F061-A124-4959-98CC-E8230563A53A"
path-guid = "18B5D941-AD59-4568-A4BB-D759E52D9E59"
license = false
eula = false

[[bin]]
name = "rtl_tcp"
path = "src/bin/rtl_tcp.rs"

[[bin]]
name = "websdr"
path = "src/bin/websdr.rs"

[lib]
name = "rtlsdr_next"
path = "src/lib.rs"

[features]
default = []
bench-c = []

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.1", features = ["ws"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls-pemfile = "2.1"
byteorder = "1.5.0"
env_logger = "0.11.5"
futures-util = { version = "0.3.32", features = ["sink"] }
libc = "0.2.182"
libusb1-sys = { version = "0.7.0", features = ["vendored"] }
log = "0.4.22"
rusb = "0.9.4"
rustfft = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
parking_lot = "0.12"
tokio-util = { version = "0.7.13", features = ["rt"] }
zerocopy = { version = "0.8.40", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "dsp_bench"
harness = false

[[bench]]
name = "vs_librtlsdr_bench"
harness = false

[[example]]
name = "fm_radio"
path = "examples/fm_radio.rs"

[[example]]
name = "monitor"
path = "examples/monitor.rs"

[[example]]
name = "hw_probe"
path = "examples/diag/hw_probe.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
cc = "1.2.56"
